fixed bottom nav z-index

--- a/src/pages/css/appcontainer.module.css
+++ b/src/pages/css/appcontainer.module.css
@@ -20,6 +20,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    z-index: 100;
   }
 
   .main{
